code/force-app/main/default/objects/TMU_Investment__c/TMU_Investment__c.object-meta.xml
<CustomObject>
    <label>投資型商品</label>
    <nameField>
        <label>商品類別/名稱</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>