code/force-app/main/default/objects/TMU_Investment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>投資型商品</relationshipLabel>
    <relationshipName>TMU_Investment</relationshipName>
    <type>Lookup</type>
</CustomField>