code/force-app/main/default/objects/TMU_Investment__c/fields/Account_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Account_Date_Closed__c</fullName>
    <label>帳戶結束日期</label>
    <length>10</length>
    <type>Text</type>
</CustomField>