code/force-app/main/default/objects/TMU_Investment__c/fields/Account_Private_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Info__c</fullName>
    <label>客戶非公開資訊</label>
    <referenceTo>Account_Private_Info__c</referenceTo>
    <relationshipLabel>投資型商品</relationshipLabel>
    <relationshipName>TMU_Investment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>