code/force-app/main/default/objects/TMU_Investment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>金額/名目本金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>