code/force-app/main/default/objects/TMU_Investment__c/fields/Main_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Main_Premium_Amount__c</fullName>
    <label>主約保費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>