code/force-app/main/default/objects/TMU_Investment__c/fields/Market_Value_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_Assessment__c</fullName>
    <label>市價評估</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>