code/force-app/main/default/objects/TMU_Investment__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <label>到期日</label>
    <length>10</length>
    <type>Text</type>
</CustomField>