code/force-app/main/default/objects/TMU_Investment__c/fields/Paid_Premium_TWD__c.field-meta.xml
<CustomField>
    <fullName>Paid_Premium_TWD__c</fullName>
    <label>已繳保費(新臺幣)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>