code/force-app/main/default/objects/TMU_Investment__c/fields/Policy_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Maturity_Date__c</fullName>
    <label>保單到期日</label>
    <length>10</length>
    <type>Text</type>
</CustomField>