code/force-app/main/default/objects/TMU_Investment__c/fields/Present_Value__c.field-meta.xml
<CustomField>
    <fullName>Present_Value__c</fullName>
    <label>現值</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>