code/force-app/main/default/objects/TMU_Investment__c/fields/Reference_Present_Value_TWD__c.field-meta.xml
<CustomField>
    <fullName>Reference_Present_Value_TWD__c</fullName>
    <label>參考現值(新臺幣)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>