code/force-app/main/default/objects/TMU_Investment__c/fields/Sub_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sub_Premium_Amount__c</fullName>
    <label>附約保費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>