code/force-app/main/default/objects/TMU_Investment__c/fields/TMU_Investment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>TMU_Investment_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>投資型商品外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>