code/force-app/main/default/objects/TMU_Investment__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>交易日期</label>
    <length>10</length>
    <type>Text</type>
</CustomField>