code/force-app/main/default/objects/TMU_Investment__c/fields/Trust_Principal_Original_Currency__c.field-meta.xml
<CustomField>
    <fullName>Trust_Principal_Original_Currency__c</fullName>
    <label>信託本金(原幣)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>