code/force-app/main/default/objects/TMU_Investment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>基金</fullName>
            </value>
            <value>
                <fullName>國外有價證券</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>組合式商品</fullName>
            </value>
            <value>
                <fullName>保險</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>