code/force-app/main/default/objects/TMU_Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Present_Value__c</columns>
    <columns>Reference_Present_Value_TWD__c</columns>
    <columns>Market_Value_Assessment__c</columns>
    <columns>Main_Premium_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>